# css-to-elm

./: .gitignore  README.md  css-to-elm.cabal  stack.yaml
src/: CssParser.hs  Main.hs
test/: CssParserSpec.hs
