name:                css-to-elm
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/css-to-elm#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable css-to-elm
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       flow,
                       text,
                       css-text,
                       http-conduit >= 2.3.0,
                       aeson,
                       bytestring,
                       attoparsec

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5,
                       text,
                       attoparsec
  exposed-modules:     CssParser
  default-language:    Haskell2010

test-suite tests
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  main-is:             CssParserSpec.hs
  hs-source-dirs:      test
  build-depends:       css-to-elm,
                       attoparsec,
                       base,
                       hspec,
                       hspec-attoparsec,
                       text
  other-modules:       CssParserSpec
  default-language:    Haskell2010